add calendar basic view

--- a/packages/.gitignore
+++ b/packages/.gitignore
@@ -2,3 +2,11 @@
 /collection2
 /simple-schema
 /bootstrap-3
+/hammer
+/supercalendar
+/Mesosphere
+/underscore-string-latest
+/fullcalendar-2
+/moment
+/jqueryui
+/build-fetcher
