--- a/packages/.gitignore
+++ b/packages/.gitignore
@@ -12,3 +12,12 @@
 /build-fetcher
 /zones
 /inject-initial
+/jquery-select2
+/sift-fullcalendar2.0
+/jquery-ui
+/fullcalendar2.0
+/iron-router
+/iron-layout
+/blaze-layout
+/iron-core
+/iron-dynamic-template
